--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   overflow-x: hidden !important;
 }
 
@@ -22,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
 }
 
 .text-primary {
@@ -331,7 +331,7 @@ h6 {
 }
 
 .item:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -366,7 +366,7 @@ h6 {
 }
 
 .item-image:before {
-  content: "";
+  content: '';
   display: block;
   padding-top: 75%;
   overflow: hidden;
@@ -487,7 +487,7 @@ h6 {
 
 .speaker-text::before {
   position: absolute;
-  content: "";
+  content: '';
   top: 50%;
   left: -2rem;
   transform: translateY(-50%);
@@ -552,13 +552,13 @@ h6 {
   font-size: 4rem;
 }
 #comedy-title {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0 0.3ch 0 0;
   margin-bottom: 0.5ch;
 }
 #night-title {
   color: #e68625;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 0.5ch;
 }
 #photo {
@@ -605,7 +605,7 @@ h6 {
 .team_head {
   color: #e68625;
   text-align: center;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-weight: 900;
   font-size: 4rem;
   letter-spacing: 3px;
@@ -685,7 +685,7 @@ h6 {
 
 .text {
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.4rem;
   margin-top: 20%;
   letter-spacing: 3px;
@@ -695,7 +695,7 @@ h6 {
 
 .text1 {
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   margin-top: 10%;
   opacity: 1 !important;
@@ -724,7 +724,7 @@ h6 {
 }
 
 .footer-social ul li a i:after {
-  content: "";
+  content: '';
   position: absolute;
   border: 1px solid rgba(255, 255, 255, 0.2);
   width: 100%;
@@ -1277,6 +1277,10 @@ h6 {
   }
 
   .subheading {
+    text-align: center;
+  }
+
+  #comedy .content {
     text-align: center;
   }
 
