--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ h6 {
 
 .navbar li {
   display: inline;
-  margin: 0.1rem;
   padding: 0.5rem 0.3rem;
   font-size: 1.15rem;
   transition: all 0.5s ease-in-out;
@@ -103,9 +102,13 @@ h6 {
   background-color: #0101011e;
   color: white;
 }
+.nav-list-ham {
+  background-color: rgba(0, 0, 0, 0.6);
+}
 .hamburger {
   display: none;
 }
+
 /*-----------------------------------------------------------------------------------------------------*/
 
 .header {
